# IntelliApply

./: .gitignore  DESIGN.md  MANIFEST.in  README.md  applied_job_checker.py  config.py  credential-example.py  credential.py  excel_util.py  main.py  print_utils.py  prompt.py  pyproject.toml  requirements.txt  string_utils.py  web_utils.py
config/: config.py  credential-example.py  prompt.py
intelliapply/: __init__.py  __main__.py  main.py
intelliapply/config/: config.py  credential-example.yaml  credential.py
intelliapply/utils/: excel_utils.py  package-lock.json  print_utils.py  singlefile.py  string_utils.py  web_utils.py
job/: applied_job_checker.py
utils/: excel_utils.py  package-lock.json  print_utils.py  singlefile.py  string_utils.py  web_utils.py
